--- a/languages/planet4-master-theme-backend-th.po
+++ b/languages/planet4-master-theme-backend-th.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Planet4 Master Theme backend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-08 09:59+0000\n"
-"PO-Revision-Date: 2019-03-13 04:53+0000\n"
+"PO-Revision-Date: 2020-11-06 11:47+0200\n"
 "Last-Translator: Nor Supang <schatuch@greenpeace.org>\n"
 "Language-Team: \n"
 "Language: th\n"
@@ -11,8 +11,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
-"X-Loco-Version: 2.2.0; wp-5.0.3"
+"X-Generator: Poedit 2.4.1\n"
+"X-Loco-Version: 2.2.0; wp-5.0.3\n"
 
 #: functions.php:144
 msgid "Navigation Bar Menu"
