--- a/languages/planet4-master-theme-en_GB.po
+++ b/languages/planet4-master-theme-en_GB.po
@@ -3,32 +3,32 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-06-08 09:06+0000\n"
-"PO-Revision-Date: 2019-07-15 09:37+0000\n"
+"PO-Revision-Date: 2020-11-06 11:45+0200\n"
 "Language-Team: English (UK)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Konstantinos Kokkorogiannis <kkokkoro@greenpeace.org>\n"
 "Language: en_GB\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.3.0; wp-5.2.2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.3.0; wp-5.2.2"
 
 #: single.php:47
 msgid "Post page"
 msgstr ""
 
 #: single.php:76
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr ""
 
 #: 404.php:30
@@ -41,7 +41,7 @@ msgstr ""
 
 #: 404.php:32
 msgid "404 Page"
-msgstr "404 Page "
+msgstr "404 Page"
 
 #: tag.php:58
 msgid "Unknown Campaign page"
@@ -245,7 +245,7 @@ msgid "Cancel"
 msgstr ""
 
 #: templates/search.twig:156
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr ""
 
 #: templates/search.twig:166
@@ -253,7 +253,7 @@ msgid "ACTIVE FILTERS"
 msgstr ""
 
 #: templates/search.twig:175
-msgid "Clear All"
+msgid "Clear all"
 msgstr ""
 
 #: templates/search.twig:182
@@ -281,7 +281,7 @@ msgid "Suggested search terms"
 msgstr ""
 
 #: templates/tease-search.twig:62
-msgid "take action"
+msgid "Take action"
 msgstr ""
 
 #: templates/tease-search.twig:65
