--- a/languages/planet4-master-theme-nl_NL.po
+++ b/languages/planet4-master-theme-nl_NL.po
@@ -3,13 +3,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-12-24 10:57+0000\n"
+"PO-Revision-Date: 2020-11-06 11:39+0200\n"
 "Last-Translator: Oscar Keur <okeur@greenpeace.org>\n"
 "Language-Team: Dutch\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -17,18 +17,18 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"X-Poedit-SearchPath-0: .\n"
-"X-Poedit-SearchPathExcluded-0: *.js\n"
 "Report-Msgid-Bugs-To: \n"
 "Language: nl_NL\n"
-"X-Loco-Version: 2.3.1; wp-5.3.2"
+"X-Loco-Version: 2.3.1; wp-5.3.2\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: *.js\n"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Post page"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Laat een reactie achter"
 
 #: 404.php:16
@@ -266,7 +266,7 @@ msgid "Cancel"
 msgstr "Cancel"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Pas filters toe"
 
 #: templates/search.twig:167
@@ -274,8 +274,8 @@ msgid "ACTIVE FILTERS"
 msgstr "ACTIEVE FILTERS"
 
 #: templates/search.twig:176
-msgid "Clear All"
-msgstr "Clear All"
+msgid "Clear all"
+msgstr "Clear all"
 
 #: templates/search.twig:183
 msgid "Issue"
@@ -302,7 +302,7 @@ msgid "Suggested search terms"
 msgstr "Suggested search terms"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "kom in actie"
 
 #: templates/tease-search.twig:70
@@ -374,7 +374,7 @@ msgid "Your Name"
 msgstr "Uw naam"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Verstuur opmerking"
 
 #. Theme Name of the plugin/theme
