--- a/languages/planet4-master-theme-backend-el.po
+++ b/languages/planet4-master-theme-backend-el.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Planet4 Master Theme backend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-05 09:23+0000\n"
-"PO-Revision-Date: 2018-11-06 11:52+0000\n"
+"PO-Revision-Date: 2020-11-06 11:47+0200\n"
 "Last-Translator: Kyriakos Diamantis <kdiamant@greenpeace.org>\n"
 "Language-Team: Greek\n"
 "Language: el\n"
@@ -11,7 +11,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/"
+"X-Generator: Poedit 2.4.1\n"
 
 #: functions.php:144
 msgid "Navigation Bar Menu"
