--- a/languages/planet4-master-theme-backend-hi_IN.po
+++ b/languages/planet4-master-theme-backend-hi_IN.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Planet4 Master Theme backend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-05 09:23+0000\n"
-"PO-Revision-Date: 2020-09-09 10:11+0000\n"
+"PO-Revision-Date: 2020-11-06 11:47+0200\n"
 "Last-Translator: Sagar Deshmuk\n"
 "Language-Team: Hindi\n"
 "Language: hi_IN\n"
@@ -11,8 +11,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
-"X-Loco-Version: 2.4.3; wp-5.4.2"
+"X-Generator: Poedit 2.4.1\n"
+"X-Loco-Version: 2.4.3; wp-5.4.2\n"
 
 #: functions.php:144
 msgid "Navigation Bar Menu"
@@ -395,7 +395,7 @@ msgstr ""
 
 #: classes/class-p4-settings.php:167
 msgid "404 Background Image"
-msgstr "404 Background Image."
+msgstr "404 Background Image"
 
 #: classes/class-p4-settings.php:174
 msgid "Add 404 Page Background Image"
