--- a/languages/planet4-master-theme-backend-hu_HU.po
+++ b/languages/planet4-master-theme-backend-hu_HU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Planet4 Master Theme backend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-08 09:59+0000\n"
-"PO-Revision-Date: 2018-09-25 07:36+0000\n"
+"PO-Revision-Date: 2020-11-06 11:47+0200\n"
 "Last-Translator: bdobos <bdobos@greenpeace.org>\n"
 "Language-Team: Hungarian\n"
 "Language: hu_HU\n"
@@ -11,7 +11,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/"
+"X-Generator: Poedit 2.4.1\n"
 
 #: functions.php:144
 msgid "Navigation Bar Menu"
@@ -142,7 +142,7 @@ msgstr "Oldaltípus"
 
 #: classes/class-p4-custom-taxonomy.php:150
 msgid "Search in Page Type"
-msgstr "Keresés az oldaltípusokban "
+msgstr "Keresés az oldaltípusokban"
 
 #: classes/class-p4-custom-taxonomy.php:151
 msgid "All Page Types"
