--- a/languages/planet4-master-theme-cs_CZ.po
+++ b/languages/planet4-master-theme-cs_CZ.po
@@ -4,12 +4,12 @@ msgstr ""
 "2;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-07-17 11:19+0000\n"
+"PO-Revision-Date: 2020-11-06 11:46+0200\n"
 "Language-Team: Czech\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -19,17 +19,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: lseverov <lseverov@greenpeace.org>\n"
 "Language: cs_CZ\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.3.0; wp-5.2.2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.3.0; wp-5.2.2"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Publikovat"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Zanech zprávu"
 
 #: 404.php:16
@@ -54,8 +54,7 @@ msgstr "Jak se můžeš zapojit"
 
 #: tag.php:55
 msgid "We want you to take action because together we're strong."
-msgstr ""
-"Jedině společně můžeme dosáhnout změny. Přidej se.\n"
+msgstr "Jedině společně můžeme dosáhnout změny. Přidej se.\n"
 
 #: tag.php:83
 msgid "Related Campaigns"
@@ -174,7 +173,7 @@ msgstr "Články"
 
 #: templates/author.twig:36
 msgid "Posts by "
-msgstr "Napsal/a"
+msgstr "Napsal/a "
 
 #: templates/author.twig:56 templates/taxonomy.twig:38
 msgid "Load More"
@@ -215,7 +214,7 @@ msgstr "Rozumím"
 
 #: templates/search.twig:16
 msgid "We're sorry we couldn't find any matches for your search term."
-msgstr "Omlouváme se, pro vyhledávaný výraz se nám nepodařilo nic najít. "
+msgstr "Omlouváme se, pro vyhledávaný výraz se nám nepodařilo nic najít."
 
 #: templates/search.twig:18
 msgid "Check for typos, and try your search again"
@@ -270,7 +269,7 @@ msgid "Cancel"
 msgstr "Zrušit"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Použít filtry"
 
 #: templates/search.twig:167
@@ -278,7 +277,7 @@ msgid "ACTIVE FILTERS"
 msgstr "Aktivní filtry"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Smazat vše"
 
 #: templates/search.twig:183
@@ -306,7 +305,7 @@ msgid "Suggested search terms"
 msgstr "Návrh vyhledávání"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "Jdu do toho"
 
 #: templates/tease-search.twig:70
@@ -327,7 +326,7 @@ msgstr "Přejít k patičce"
 
 #: templates/single.twig:41 templates/tease-taxonomy-post.twig:26
 msgid "by"
-msgstr " Napsal/a"
+msgstr "Napsal/a"
 
 #: templates/single.twig:53 templates/comments_section.twig:2
 msgid "Comments"
@@ -378,7 +377,7 @@ msgid "Your Name"
 msgstr "Vaše jméno"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Odeslat komentář"
 
 #. Theme Name of the plugin/theme
