--- a/languages/planet4-master-theme-de_DE.po
+++ b/languages/planet4-master-theme-de_DE.po
@@ -3,31 +3,31 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-06-08 09:06+0000\n"
-"PO-Revision-Date: 2018-09-25 13:42+0000\n"
+"PO-Revision-Date: 2020-11-06 11:46+0200\n"
 "Language-Team: German\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Anaïs Hector <ahector@greenpeace.org>\n"
 "Language: de_DE\n"
+"Report-Msgid-Bugs-To: \n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: "
 
 #: single.php:47
 msgid "Post page"
 msgstr "Beitragsseite"
 
 #: single.php:76
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Hinterlassen Sie Ihre Antwort"
 
 #: 404.php:30
@@ -206,7 +206,7 @@ msgstr ""
 
 #: templates/search.twig:23
 msgid "We also included results for "
-msgstr "Wir haben auch folgende Ergebnisse mit einbezogen"
+msgstr "Wir haben auch folgende Ergebnisse mit einbezogen "
 
 #: templates/search.twig:37
 msgid "This Site"
@@ -245,7 +245,7 @@ msgid "Cancel"
 msgstr "Abbrechen"
 
 #: templates/search.twig:156
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Filter anwenden"
 
 #: templates/search.twig:166
@@ -253,7 +253,7 @@ msgid "ACTIVE FILTERS"
 msgstr "AKTIVE FILTER"
 
 #: templates/search.twig:175
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Alles löschen"
 
 #: templates/search.twig:182
@@ -281,7 +281,7 @@ msgid "Suggested search terms"
 msgstr "Empfohlene Suchbegriffe"
 
 #: templates/tease-search.twig:62
-msgid "take action"
+msgid "Take action"
 msgstr "Handeln"
 
 #: templates/tease-search.twig:65
