--- a/languages/planet4-master-theme-en_US.po
+++ b/languages/planet4-master-theme-en_US.po
@@ -3,24 +3,24 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-08-10 12:32+0000\n"
-"PO-Revision-Date: 2018-10-09 08:23+0000\n"
+"PO-Revision-Date: 2020-11-06 11:45+0200\n"
 "Language-Team: English (United States)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Kyriakos Diamantis <kdiamant@greenpeace.org>\n"
 "Language: en_US\n"
+"Report-Msgid-Bugs-To: \n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: "
 
 #: functions.php:85
 msgid "Most relevant"
@@ -75,7 +75,7 @@ msgid "Post page"
 msgstr ""
 
 #: single.php:76
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr ""
 
 #: classes/class-p4-search.php:407
@@ -240,7 +240,7 @@ msgid "Cancel"
 msgstr ""
 
 #: templates/search.twig:156
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr ""
 
 #: templates/search.twig:166
@@ -248,7 +248,7 @@ msgid "ACTIVE FILTERS"
 msgstr ""
 
 #: templates/search.twig:175
-msgid "Clear All"
+msgid "Clear all"
 msgstr ""
 
 #: templates/search.twig:182
@@ -288,7 +288,7 @@ msgid "Skip to Footer"
 msgstr ""
 
 #: templates/tease-search.twig:62
-msgid "take action"
+msgid "Take action"
 msgstr ""
 
 #: templates/tease-search.twig:65
