--- a/languages/planet4-master-theme-es_CO.po
+++ b/languages/planet4-master-theme-es_CO.po
@@ -3,12 +3,12 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-05-29 10:24+0000\n"
+"PO-Revision-Date: 2020-11-06 11:45+0200\n"
 "Language-Team: Spanish (Colombia)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -18,17 +18,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Luca Tiralongo <ltiralon@greenpeace.org>\n"
 "Language: es_CO\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.2.2; wp-5.2.1\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.2.2; wp-5.2.1"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Post page"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Deja tu Comentario"
 
 #: 404.php:16
@@ -37,7 +37,7 @@ msgstr "Lo sentimos, no pudimos encontrar esa página."
 
 #: 404.php:17
 msgid "Enter your search term below"
-msgstr "Ingresa debajo el termino que quieres buscar "
+msgstr "Ingresa debajo el termino que quieres buscar"
 
 #: 404.php:18
 msgid "404 Page"
@@ -227,7 +227,7 @@ msgstr "Buscar en el archivo. Serás redirijido a nuestro antiguo sitio."
 
 #: templates/search.twig:24
 msgid "We also included results for "
-msgstr "También incluimos resultados para:"
+msgstr "También incluimos resultados para: "
 
 #: templates/search.twig:38
 msgid "This Site"
@@ -266,7 +266,7 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Aplicar Filtros"
 
 #: templates/search.twig:167
@@ -274,7 +274,7 @@ msgid "ACTIVE FILTERS"
 msgstr "Filtros Activos"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Limpiar Todo"
 
 #: templates/search.twig:183
@@ -302,7 +302,7 @@ msgid "Suggested search terms"
 msgstr "Términos de búsqueda sugeridos"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "Participa"
 
 #: templates/tease-search.twig:70
@@ -374,7 +374,7 @@ msgid "Your Name"
 msgstr ""
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr ""
 
 #. Theme Name of the plugin/theme
