--- a/languages/planet4-master-theme-fr_CA.po
+++ b/languages/planet4-master-theme-fr_CA.po
@@ -3,13 +3,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-11-26 14:49+0000\n"
+"PO-Revision-Date: 2020-11-06 11:44+0200\n"
 "Last-Translator: Shawn Inder <shawn.inder@greenpeace.org>\n"
 "Language-Team: French (Canada)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -17,18 +17,18 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"X-Poedit-SearchPath-0: .\n"
-"X-Poedit-SearchPathExcluded-0: *.js\n"
 "Language: fr_CA\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.3.1; wp-5.3"
+"X-Loco-Version: 2.3.1; wp-5.3\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: *.js\n"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Page de post"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Inscrivez votre réponse"
 
 #: 404.php:16
@@ -170,7 +170,7 @@ msgstr "Articles"
 
 #: templates/author.twig:36
 msgid "Posts by "
-msgstr "Posts par"
+msgstr "Posts par "
 
 #: templates/author.twig:56 templates/taxonomy.twig:38
 msgid "Load More"
@@ -231,7 +231,7 @@ msgstr ""
 
 #: templates/search.twig:24
 msgid "We also included results for "
-msgstr "Nous avons aussi inclut les résultats pour"
+msgstr "Nous avons aussi inclut les résultats pour "
 
 #: templates/search.twig:38
 msgid "This Site"
@@ -270,7 +270,7 @@ msgid "Cancel"
 msgstr "Annuler"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Appliquer les filtres"
 
 #: templates/search.twig:167
@@ -278,7 +278,7 @@ msgid "ACTIVE FILTERS"
 msgstr "FILTRES ACTIFS"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Tout effacer"
 
 #: templates/search.twig:183
@@ -306,7 +306,7 @@ msgid "Suggested search terms"
 msgstr "Suggestions de termes pour votre recherche"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "passer à l'action"
 
 #: templates/tease-search.twig:70
@@ -378,7 +378,7 @@ msgid "Your Name"
 msgstr "Votre nom"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Soumettre"
 
 #. Theme Name of the plugin/theme
