--- a/languages/planet4-master-theme-he_IL.po
+++ b/languages/planet4-master-theme-he_IL.po
@@ -3,12 +3,12 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-09-10 09:45+0000\n"
+"PO-Revision-Date: 2020-11-06 11:44+0200\n"
 "Language-Team: Hebrew\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -18,17 +18,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Elad Aybes <eaybes@greenpeace.org>\n"
 "Language: he_IL\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.3.0; wp-5.2.3\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.3.0; wp-5.2.3"
 
 #: single.php:33
 msgid "Post page"
 msgstr "פרסום עמוד"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "השארת תגובה"
 
 #: 404.php:16
@@ -170,7 +170,7 @@ msgstr "מאמרים"
 
 #: templates/author.twig:36
 msgid "Posts by "
-msgstr "פרסומים על-ידי"
+msgstr "פרסומים על-ידי "
 
 #: templates/author.twig:56 templates/taxonomy.twig:38
 msgid "Load More"
@@ -229,7 +229,7 @@ msgstr "הנך מועבר לארכיון."
 
 #: templates/search.twig:24
 msgid "We also included results for "
-msgstr "כללנו גם תוצאות עבור"
+msgstr "כללנו גם תוצאות עבור "
 
 #: templates/search.twig:38
 msgid "This Site"
@@ -268,7 +268,7 @@ msgid "Cancel"
 msgstr "ביטול"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "החל מסננים"
 
 #: templates/search.twig:167
@@ -276,7 +276,7 @@ msgid "ACTIVE FILTERS"
 msgstr "מסננים פעילים"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "נקה הכל"
 
 #: templates/search.twig:183
@@ -304,7 +304,7 @@ msgid "Suggested search terms"
 msgstr "מילות חיפוש מוצעות"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "לעשות משהו"
 
 #: templates/tease-search.twig:70
@@ -376,7 +376,7 @@ msgid "Your Name"
 msgstr "שמך"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "פרסום תגובה"
 
 #. Theme Name of the plugin/theme
