--- a/languages/planet4-master-theme-ja.po
+++ b/languages/planet4-master-theme-ja.po
@@ -3,12 +3,12 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2020-05-28 12:23+0000\n"
+"PO-Revision-Date: 2020-11-06 11:41+0200\n"
 "Language-Team: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -18,17 +18,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Maud Leray - P4 Team\n"
 "Language: ja\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.4.0; wp-5.4.1\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.4.0; wp-5.4.1"
 
 #: single.php:33
 msgid "Post page"
 msgstr "投稿ページ"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "あなたの返答を残す"
 
 #: 404.php:16
@@ -113,7 +113,6 @@ msgstr "検索ページ"
 msgid "%1$d result for '%2$s'"
 msgid_plural "%1$d results for '%2$s'"
 msgstr[0] "'%2$s'の検索結果は、%1$d 件です"
-msgstr[1] ""
 
 #. translators:
 #: classes/class-p4-search.php:418
@@ -121,7 +120,6 @@ msgstr[1] ""
 msgid "%d result"
 msgid_plural "%d results"
 msgstr[0] "%d件"
-msgstr[1] ""
 
 #: classes/class-p4-search.php:478
 msgid "Action"
@@ -170,7 +168,7 @@ msgstr "記事"
 
 #: templates/author.twig:36
 msgid "Posts by "
-msgstr "投稿者"
+msgstr "投稿者 "
 
 #: templates/author.twig:56 templates/taxonomy.twig:38
 msgid "Load More"
@@ -195,8 +193,7 @@ msgstr "メニューをとじる"
 
 #: templates/navigation-bar.twig:29
 msgid "Selected"
-msgstr ""
-"選択済み\n"
+msgstr "選択済み\n"
 
 #: templates/navigation-bar.twig:30
 msgid "Change Country"
@@ -228,7 +225,7 @@ msgstr "アーカイブを検索する。アーカイブサイトにリダイレ
 
 #: templates/search.twig:24
 msgid "We also included results for "
-msgstr "次の結果を含む"
+msgstr "次の結果を含む "
 
 #: templates/search.twig:38
 msgid "This Site"
@@ -267,7 +264,7 @@ msgid "Cancel"
 msgstr "キャンセル"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "フィルターを設定する"
 
 #: templates/search.twig:167
@@ -275,7 +272,7 @@ msgid "ACTIVE FILTERS"
 msgstr "設定中のフィルター"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "すベてクリア"
 
 #: templates/search.twig:183
@@ -303,7 +300,7 @@ msgid "Suggested search terms"
 msgstr "おすすめ検索キーワード"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "アクションに参加する"
 
 #: templates/tease-search.twig:70
@@ -375,7 +372,7 @@ msgid "Your Name"
 msgstr ""
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr ""
 
 #. Theme Name of the plugin/theme
