--- a/languages/planet4-master-theme-pl_PL.po
+++ b/languages/planet4-master-theme-pl_PL.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10 >= 2 && n%10<=4 "
-"&&(n%100<10||n%100 >= 20)? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10 >= 2 && n%10<=4 &&(n"
+"%100<10||n%100 >= 20)? 1 : 2);\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2020-06-13 15:14+0000\n"
+"PO-Revision-Date: 2020-11-06 11:38+0200\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -19,17 +19,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Marianna Hoszowska\n"
 "Language: pl_PL\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.4.0; wp-5.4.1\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.4.0; wp-5.4.1"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Post page"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Dodaj odpowiedź"
 
 #: 404.php:16
@@ -272,7 +272,7 @@ msgid "Cancel"
 msgstr "Anuluj"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Filtruj"
 
 #: templates/search.twig:167
@@ -280,7 +280,7 @@ msgid "ACTIVE FILTERS"
 msgstr "AKTYWNE FILTRY"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Wyczyść wszystko"
 
 #: templates/search.twig:183
@@ -308,7 +308,7 @@ msgid "Suggested search terms"
 msgstr "Sugerowane wyszukanie"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "działaj"
 
 #: templates/tease-search.twig:70
@@ -380,7 +380,7 @@ msgid "Your Name"
 msgstr "Twoje imię"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Opublikuj komentarz"
 
 #. Theme Name of the plugin/theme
