--- a/languages/planet4-master-theme-pt_BR.po
+++ b/languages/planet4-master-theme-pt_BR.po
@@ -3,13 +3,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-08-27 17:34+0000\n"
+"PO-Revision-Date: 2020-11-06 11:41+0200\n"
 "Last-Translator: Julia Mente <jmarubay@greenpeace.org>\n"
 "Language-Team: Portuguese (Brazil)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -17,18 +17,18 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"X-Poedit-SearchPath-0: .\n"
-"X-Poedit-SearchPathExcluded-0: *.js\n"
 "Language: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.3.0; wp-5.2.2"
+"X-Loco-Version: 2.3.0; wp-5.2.2\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: *.js\n"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Página de post"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Deixe um comentário"
 
 #: 404.php:16
@@ -267,7 +267,7 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Aplicar Filtros"
 
 #: templates/search.twig:167
@@ -275,7 +275,7 @@ msgid "ACTIVE FILTERS"
 msgstr "FILTROS ATIVOS"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Limpar tudo"
 
 #: templates/search.twig:183
@@ -303,7 +303,7 @@ msgid "Suggested search terms"
 msgstr "Termos de busca sugeridos"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "Participe já"
 
 #: templates/tease-search.twig:70
@@ -375,7 +375,7 @@ msgid "Your Name"
 msgstr "Seu nome"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Envie seu comentário"
 
 #. Theme Name of the plugin/theme
