--- a/languages/planet4-master-theme-ro_RO.po
+++ b/languages/planet4-master-theme-ro_RO.po
@@ -4,12 +4,12 @@ msgstr ""
 "=0)))? 2 : 1));\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-07-01 14:36+0000\n"
+"PO-Revision-Date: 2020-11-06 11:40+0200\n"
 "Language-Team: Romanian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -19,17 +19,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Andrada Radu <aradu@greenpeace.org>\n"
 "Language: ro_RO\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.3.0; wp-5.2.2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.3.0; wp-5.2.2"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Pagină tip articol"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Adaugă răspunsul tău"
 
 #: 404.php:16
@@ -269,7 +269,7 @@ msgid "Cancel"
 msgstr "Anulează"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Aplică filtre"
 
 #: templates/search.twig:167
@@ -277,7 +277,7 @@ msgid "ACTIVE FILTERS"
 msgstr "FILTRE ACTIVE"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Şterge tot"
 
 #: templates/search.twig:183
@@ -305,7 +305,7 @@ msgid "Suggested search terms"
 msgstr "Termeni de căutare sugeraţi"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "implică-te"
 
 #: templates/tease-search.twig:70
@@ -377,7 +377,7 @@ msgid "Your Name"
 msgstr "Numele tău"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Adaugă comentariu"
 
 #. Theme Name of the plugin/theme
