--- a/languages/planet4-master-theme-sk_SK.po
+++ b/languages/planet4-master-theme-sk_SK.po
@@ -4,12 +4,12 @@ msgstr ""
 "2;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-11-30 21:51+0000\n"
+"PO-Revision-Date: 2020-11-06 11:40+0200\n"
 "Language-Team: Slovak\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -19,17 +19,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Lucia Szabova <lszabova@greenpeace.org>\n"
 "Language: sk_SK\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.3.1; wp-5.3\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.3.1; wp-5.3"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Stránka príspevku"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Nechaj svoju odpoveď"
 
 #: 404.php:16
@@ -82,8 +82,7 @@ msgstr "Prepnúť vyhľadávacie pole"
 
 #: functions.php:270
 msgid "DONATE"
-msgstr ""
-"DAROVAŤ\n"
+msgstr "DAROVAŤ"
 
 #: functions.php:271
 msgid "International (English)"
@@ -258,8 +257,7 @@ msgstr "PROBLÉM"
 
 #: templates/search.twig:92
 msgid "CATEGORY"
-msgstr ""
-"Kategória\n"
+msgstr "Kategória"
 
 #: templates/search.twig:113
 msgid "CONTENT TYPES"
@@ -274,7 +272,7 @@ msgid "Cancel"
 msgstr "Zrušiť"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Použiť filtre"
 
 #: templates/search.twig:167
@@ -282,7 +280,7 @@ msgid "ACTIVE FILTERS"
 msgstr "AKTÍVNE FILTRE"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Zmazať všetko"
 
 #: templates/search.twig:183
@@ -310,7 +308,7 @@ msgid "Suggested search terms"
 msgstr "Navrhované hľadané výrazy"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "konať"
 
 #: templates/tease-search.twig:70
@@ -382,7 +380,7 @@ msgid "Your Name"
 msgstr "Tvoje meno"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Uverejniť komentár"
 
 #. Theme Name of the plugin/theme
