--- a/languages/planet4-master-theme-sl_SI.po
+++ b/languages/planet4-master-theme-sl_SI.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : "
-"n%100==3||n%100==4 ? 2 : 3;\n"
+"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3||n"
+"%100==4 ? 2 : 3;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-05-29 10:18+0000\n"
+"PO-Revision-Date: 2020-11-06 11:40+0200\n"
 "Language-Team: Slovenian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -19,17 +19,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Matjaz Dovecar <mdovecar@greenpeace.org>\n"
 "Language: sl_SI\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.2.2; wp-5.2.1\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.2.2; wp-5.2.1"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Stran z objavami"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Komentiraj"
 
 #: 404.php:16
@@ -271,7 +271,7 @@ msgid "Cancel"
 msgstr "Prekliči"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Uporabi filtre"
 
 #: templates/search.twig:167
@@ -279,7 +279,7 @@ msgid "ACTIVE FILTERS"
 msgstr "AKTIVNI FILTRI"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Počisti vse"
 
 #: templates/search.twig:183
@@ -307,7 +307,7 @@ msgid "Suggested search terms"
 msgstr "Predlagani iskalni nizi"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "ukrepaj"
 
 #: templates/tease-search.twig:70
@@ -379,7 +379,7 @@ msgid "Your Name"
 msgstr "Tvoje ime"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Objavi komentar"
 
 #. Theme Name of the plugin/theme
