--- a/languages/planet4-master-theme-sv_SE.po
+++ b/languages/planet4-master-theme-sv_SE.po
@@ -3,12 +3,12 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2019-02-11 12:10+0000\n"
+"PO-Revision-Date: 2020-11-06 11:40+0200\n"
 "Language-Team: Swedish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -18,17 +18,17 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Last-Translator: Emina Serbic <eserbic@greenpeace.org>\n"
 "Language: sv_SE\n"
+"Report-Msgid-Bugs-To: \n"
+"X-Loco-Version: 2.2.0; wp-5.0.3\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.2.0; wp-5.0.3"
 
 #: single.php:33
 msgid "Post page"
 msgstr "Inläggssida"
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr "Kommentera"
 
 #: 404.php:16
@@ -266,7 +266,7 @@ msgid "Cancel"
 msgstr "Avbryt"
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr "Applicera filter"
 
 #: templates/search.twig:167
@@ -274,7 +274,7 @@ msgid "ACTIVE FILTERS"
 msgstr "AKTIVA FILTER"
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr "Rensa alla"
 
 #: templates/search.twig:183
@@ -302,7 +302,7 @@ msgid "Suggested search terms"
 msgstr "Föreslagna sökord"
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr "engagera dig"
 
 #: templates/tease-search.twig:70
@@ -374,7 +374,7 @@ msgid "Your Name"
 msgstr "Ditt namn"
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr "Skicka kommentar"
 
 #. Theme Name of the plugin/theme
