--- a/languages/planet4-master-theme.pot
+++ b/languages/planet4-master-theme.pot
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
-"POT-Creation-Date: 2018-12-13 11:03+0000\n"
+"POT-Creation-Date: 2020-11-06 11:48+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -20,14 +20,13 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
-"Language: "
 
 #: single.php:33
 msgid "Post page"
 msgstr ""
 
 #: single.php:67
-msgid "Leave Your Reply"
+msgid "Leave your reply"
 msgstr ""
 
 #: 404.php:16
@@ -265,7 +264,7 @@ msgid "Cancel"
 msgstr ""
 
 #: templates/search.twig:157
-msgid "Apply Filters"
+msgid "Apply filters"
 msgstr ""
 
 #: templates/search.twig:167
@@ -273,7 +272,7 @@ msgid "ACTIVE FILTERS"
 msgstr ""
 
 #: templates/search.twig:176
-msgid "Clear All"
+msgid "Clear all"
 msgstr ""
 
 #: templates/search.twig:183
@@ -301,7 +300,7 @@ msgid "Suggested search terms"
 msgstr ""
 
 #: templates/tease-search.twig:67
-msgid "take action"
+msgid "Take action"
 msgstr ""
 
 #: templates/tease-search.twig:70
@@ -373,7 +372,7 @@ msgid "Your Name"
 msgstr ""
 
 #: templates/comment_form/submit_button.twig:1
-msgid "Post Comment"
+msgid "Post comment"
 msgstr ""
 
 #. Theme Name of the plugin/theme
