--- a/languages/planet4-blocks-backend-pt_BR.po
+++ b/languages/planet4-blocks-backend-pt_BR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Planet4 blocks plugin backend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-07 10:10+0000\n"
-"PO-Revision-Date: 2018-08-15 12:20+0000\n"
+"PO-Revision-Date: 2020-11-11 15:27+0200\n"
 "Last-Translator: rafa <rafael.silva@greenpeace.org>\n"
 "Language-Team: Portuguese (Brazil)\n"
 "Language: pt_BR\n"
@@ -11,7 +11,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/"
+"X-Generator: Poedit 2.4.1\n"
 
 #: classes/class-loader.php:90
 msgid "Requirements Error(s)"
@@ -230,7 +230,7 @@ msgid ""
 "Show 1 Row: Displays 3 Covers on desktop and 2 Covers on mobile.<br> \n"
 "\t\t\t\t\t\t\t\t\t\tShow 2 Rows: Displays 6 Covers on desktop and 4 covers "
 "on mobile.<br>\n"
-"\t\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load More "
+"\t\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load more "
 "button is clicked)<br>\n"
 "\t\t\t\t\t\t\t\t\t\tShow All Covers: Displays all available Covers on "
 "desktop and 4 Covers on mobile."
@@ -238,8 +238,8 @@ msgstr ""
 "Mostrar 1 linha: Exibe 3 capas no desktop e 2 capas no celular. <br>\n"
 "\t\t\t\t\t\t\t\t\t\tMostrar 2 linhas: Exibe 6 capas no desktop e 4 capas no "
 "celular. <br>\n"
-"\t\t\t\t\t\t\t\t\t\t(Outra linha será exibida cada vez que o botão \"Ver "
-"mais\" for clicado)<br>\n"
+"\t\t\t\t\t\t\t\t\t\t(Outra linha será exibida cada vez que o botão \"Ver mais"
+"\" for clicado)<br>\n"
 "\t\t\t\t\t\t\t\t\t\tMostrar todas as capas: Exibe todas as capas disponíveis "
 "no desktop e 4 capas no celular."
 
@@ -260,7 +260,7 @@ msgid "Show All Covers"
 msgstr "Mostrar todas as capas"
 
 #: classes/controller/blocks/class-covers-controllers.php:85
-msgid "Take Action Covers"
+msgid "Take action Covers"
 msgstr "Capas do bloco de ação"
 
 #: classes/controller/blocks/class-campaignthumbnail-controller.php:36
@@ -522,15 +522,15 @@ msgid "Split Two Columns"
 msgstr "2 colunas divididas"
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:57
-msgid "Select a Take Action Page"
+msgid "Select a Take action Page"
 msgstr "Selecione uma página de Ação"
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:58
-msgid "Associate this block with a Take Action page"
+msgid "Associate this block with a Take action page"
 msgstr "Associar este bloco com uma página Agir Agora"
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:66
-msgid "Take Action Boxout"
+msgid "Take action Boxout"
 msgstr "Caixa de ação"
 
 #: classes/controller/blocks/class-contentfourcolumn-controller.php:52
@@ -563,7 +563,7 @@ msgid ""
 "Show 1 Row: Displays 4 Posts on desktop and 3 Posts on mobile.<br> \n"
 "\t\t\t\t\t\t\t\t\tShow 2 Rows: Displays 8 Posts on desktop and 6 Posts on "
 "mobile.<br>\n"
-"\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load More "
+"\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load more "
 "button is clicked)<br>\n"
 "\t\t\t\t\t\t\t\t\tShow All Rows: Displays all available Posts on desktop and "
 "4 Posts on mobile."
@@ -571,8 +571,8 @@ msgstr ""
 "Mostrar 1 linha: Exibe 4 posts no desktop e 3 posts no celular. <br>\n"
 "\t\t\t\t\t\t\t\t\t\tMostrar 2 linhas: Exibe 8 posts no desktop e 6 posts no "
 "celular. <br>\n"
-"\t\t\t\t\t\t\t\t\t\t(Outra linha será exibida cada vez que o botão \"Ver "
-"mais\" for clicado)<br>\n"
+"\t\t\t\t\t\t\t\t\t\t(Outra linha será exibida cada vez que o botão \"Ver mais"
+"\" for clicado)<br>\n"
 "\t\t\t\t\t\t\t\t\t\tMostrar todas as linhas: Exibe todos os posts "
 "disponíveis no desktop e 4 posts no celular."
 
@@ -732,14 +732,14 @@ msgid ""
 "<br /> the higher the number, the more faded the image will look. If you "
 "leave this <br/> empty, the default of 30 will be used.</i>"
 msgstr ""
-"<i>Uma camada de esmaecimento é usada em cima da imagem de fundo. <br />"
-"Escolha um número entre 1 e 100, sendo que quanto mais alto for o número, "
+"<i>Uma camada de esmaecimento é usada em cima da imagem de fundo. <br /"
+">Escolha um número entre 1 e 100, sendo que quanto mais alto for o número, "
 "mais <br /> esmaecida a imagem vai ficar. Se nenhum número for escolhido, o "
 "padrão (30) será usado. </i>\n"
 "\n"
-"We use an overlay to fade the image back. Use a number between 1 and 100,<br "
-"/> the higher the number, the more faded the image will look. If you leave "
-"this <br/> empty, the default of 30 will be used.</i>"
+"We use an overlay to fade the image back. Use a number between 1 and 100,"
+"<br /> the higher the number, the more faded the image will look. If you "
+"leave this <br/> empty, the default of 30 will be used.</i>"
 
 #: classes/controller/blocks/class-happypoint-controller.php:81
 msgid "Use mailing list iframe"
