--- a/languages/planet4-blocks-backend-hu_HU.po
+++ b/languages/planet4-blocks-backend-hu_HU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Planet4 blocks plugin backend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-07 10:10+0000\n"
-"PO-Revision-Date: 2018-10-24 16:01+0000\n"
+"PO-Revision-Date: 2020-11-11 15:27+0200\n"
 "Last-Translator: bdobos <bdobos@greenpeace.org>\n"
 "Language-Team: Hungarian\n"
 "Language: hu_HU\n"
@@ -11,7 +11,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/"
+"X-Generator: Poedit 2.4.1\n"
 
 #: classes/class-loader.php:90
 msgid "Requirements Error(s)"
@@ -232,7 +232,7 @@ msgid ""
 "Show 1 Row: Displays 3 Covers on desktop and 2 Covers on mobile.<br> \n"
 "\t\t\t\t\t\t\t\t\t\tShow 2 Rows: Displays 6 Covers on desktop and 4 covers "
 "on mobile.<br>\n"
-"\t\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load More "
+"\t\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load more "
 "button is clicked)<br>\n"
 "\t\t\t\t\t\t\t\t\t\tShow All Covers: Displays all available Covers on "
 "desktop and 4 Covers on mobile."
@@ -266,7 +266,7 @@ msgid "Show All Covers"
 msgstr "Összes borító mutatása"
 
 #: classes/controller/blocks/class-covers-controllers.php:85
-msgid "Take Action Covers"
+msgid "Take action Covers"
 msgstr "Cselekvésre ösztönző borítók"
 
 #: classes/controller/blocks/class-campaignthumbnail-controller.php:36
@@ -529,23 +529,23 @@ msgid "Split Two Columns"
 msgstr "Kétosztatú borító (ügy / kampány)"
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:57
-msgid "Select a Take Action Page"
+msgid "Select a Take action Page"
 msgstr "Válassz Cselekvés-oldalt"
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:58
-msgid "Associate this block with a Take Action page"
+msgid "Associate this block with a Take action page"
 msgstr "Társítsd ezt a blokkot egy Cselekedj-oldalhoz"
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:66
-msgid "Take Action Boxout"
+msgid "Take action Boxout"
 msgstr "Cselekvés doboz"
 
 #: classes/controller/blocks/class-contentfourcolumn-controller.php:52
 msgid ""
 "Title. <i>If it is not defined, title will default to 'Publications'</i>"
 msgstr ""
-"Cím. <i>Ha nincs megadva, az alapértelmezett \"Kiadványok\" lesz "
-"használva</i>"
+"Cím. <i>Ha nincs megadva, az alapértelmezett \"Kiadványok\" lesz használva</"
+"i>"
 
 #. placeholder needs to represent the ordinal of the column, eg. 1st, 2nd etc.
 #: classes/controller/blocks/class-contentfourcolumn-controller.php:57
@@ -573,7 +573,7 @@ msgid ""
 "Show 1 Row: Displays 4 Posts on desktop and 3 Posts on mobile.<br> \n"
 "\t\t\t\t\t\t\t\t\tShow 2 Rows: Displays 8 Posts on desktop and 6 Posts on "
 "mobile.<br>\n"
-"\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load More "
+"\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load more "
 "button is clicked)<br>\n"
 "\t\t\t\t\t\t\t\t\tShow All Rows: Displays all available Posts on desktop and "
 "4 Posts on mobile."
