--- a/languages/planet4-blocks-backend.pot
+++ b/languages/planet4-blocks-backend.pot
@@ -3,16 +3,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Planet4 blocks plugin backend\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-07 10:10+0000\n"
+"POT-Creation-Date: 2020-11-11 15:27+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
-"Language: \n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/"
+"X-Generator: Poedit 2.4.1\n"
 
 #: classes/class-loader.php:90
 msgid "Requirements Error(s)"
@@ -231,7 +230,7 @@ msgid ""
 "Show 1 Row: Displays 3 Covers on desktop and 2 Covers on mobile.<br> \n"
 "\t\t\t\t\t\t\t\t\t\tShow 2 Rows: Displays 6 Covers on desktop and 4 covers "
 "on mobile.<br>\n"
-"\t\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load More "
+"\t\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load more "
 "button is clicked)<br>\n"
 "\t\t\t\t\t\t\t\t\t\tShow All Covers: Displays all available Covers on "
 "desktop and 4 Covers on mobile."
@@ -254,7 +253,7 @@ msgid "Show All Covers"
 msgstr ""
 
 #: classes/controller/blocks/class-covers-controllers.php:85
-msgid "Take Action Covers"
+msgid "Take action Covers"
 msgstr ""
 
 #: classes/controller/blocks/class-campaignthumbnail-controller.php:36
@@ -511,15 +510,15 @@ msgid "Split Two Columns"
 msgstr ""
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:57
-msgid "Select a Take Action Page"
+msgid "Select a Take action Page"
 msgstr ""
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:58
-msgid "Associate this block with a Take Action page"
+msgid "Associate this block with a Take action page"
 msgstr ""
 
 #: classes/controller/blocks/class-takeactionboxout-controller.php:66
-msgid "Take Action Boxout"
+msgid "Take action Boxout"
 msgstr ""
 
 #: classes/controller/blocks/class-contentfourcolumn-controller.php:52
@@ -551,7 +550,7 @@ msgid ""
 "Show 1 Row: Displays 4 Posts on desktop and 3 Posts on mobile.<br> \n"
 "\t\t\t\t\t\t\t\t\tShow 2 Rows: Displays 8 Posts on desktop and 6 Posts on "
 "mobile.<br>\n"
-"\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load More "
+"\t\t\t\t\t\t\t\t\t(Another Row will be revealed each time the Load more "
 "button is clicked)<br>\n"
 "\t\t\t\t\t\t\t\t\tShow All Rows: Displays all available Posts on desktop and "
 "4 Posts on mobile."
