--- a/languages/planet4-blocks-cs_CZ.po
+++ b/languages/planet4-blocks-cs_CZ.po
@@ -1,13 +1,13 @@
 # Planet4 Plugin Blocks English base file.
 # Copyright (C) 2017 Greenpeace International
 # License:     GPLv3
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Planet4 blocks plugin frontend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-09-09 11:52+0000\n"
-"PO-Revision-Date: 2020-10-09 08:21+0000\n"
+"PO-Revision-Date: 2020-11-11 15:27+0200\n"
 "Last-Translator: Nikos Roussos\n"
 "Language-Team: Czech\n"
 "Language: cs_CZ\n"
@@ -16,8 +16,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=( n == 1 ) ? 0 : ( n >= 2 && n <= 4 ) ? 1 : "
 "2;\n"
-"X-Generator: Loco https://localise.biz/\n"
-"X-Loco-Version: 2.4.3; wp-5.4.2"
+"X-Generator: Poedit 2.4.1\n"
+"X-Loco-Version: 2.4.3; wp-5.4.2\n"
 
 #: classes/class-loader.php:463
 msgid "Planet 4 Blocks"
@@ -42,7 +42,7 @@ msgstr "Zjisti více o tomto tématu "
 
 #: classes/blocks/class-splittwocolumns.php:163
 #: assets/src/blocks/Splittwocolumns/SplittwocolumnsSettings.js:82
-msgid "Get Involved"
+msgid "Get involved"
 msgstr "Zapoj se"
 
 #: classes/blocks/class-articles.php:46 classes/blocks/class-covers.php:369
@@ -50,7 +50,7 @@ msgstr "Zapoj se"
 #: templates/blocks/content_covers.twig:70
 #: templates/blocks/content_covers.twig:78
 #: assets/src/blocks/Articles/ArticlesBlock.js:41
-msgid "Load More"
+msgid "Load more"
 msgstr "Další"
 
 #: classes/blocks/class-articles.php:50
@@ -63,7 +63,7 @@ msgid "Error"
 msgstr ""
 
 #: classes/blocks/class-covers.php:346
-msgid "Take Action"
+msgid "Take action"
 msgstr "JDU DO TOHO"
 
 #: assets/src/blocks/Articles/ArticlePreview.js:43
