--- a/languages/planet4-blocks-he_IL.po
+++ b/languages/planet4-blocks-he_IL.po
@@ -1,13 +1,13 @@
 # Planet4 Plugin Blocks English base file.
 # Copyright (C) 2017 Greenpeace International
 # License:     GPLv3
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Planet4 blocks plugin frontend\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-09-09 11:52+0000\n"
-"PO-Revision-Date: 2020-10-09 08:22+0000\n"
+"PO-Revision-Date: 2020-11-11 15:26+0200\n"
 "Last-Translator: Nikos Roussos\n"
 "Language-Team: Hebrew\n"
 "Language: he_IL\n"
@@ -15,8 +15,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Loco https://localise.biz/\n"
-"X-Loco-Version: 2.4.3; wp-5.4.2"
+"X-Generator: Poedit 2.4.1\n"
+"X-Loco-Version: 2.4.3; wp-5.4.2\n"
 
 #: classes/class-loader.php:463
 msgid "Planet 4 Blocks"
@@ -41,7 +41,7 @@ msgstr "ללמוד עוד על הנושא הזה"
 
 #: classes/blocks/class-splittwocolumns.php:163
 #: assets/src/blocks/Splittwocolumns/SplittwocolumnsSettings.js:82
-msgid "Get Involved"
+msgid "Get involved"
 msgstr "לעשות משהו"
 
 #: classes/blocks/class-articles.php:46 classes/blocks/class-covers.php:369
@@ -49,7 +49,7 @@ msgstr "לעשות משהו"
 #: templates/blocks/content_covers.twig:70
 #: templates/blocks/content_covers.twig:78
 #: assets/src/blocks/Articles/ArticlesBlock.js:41
-msgid "Load More"
+msgid "Load more"
 msgstr "טען עוד"
 
 #: classes/blocks/class-articles.php:50
@@ -62,7 +62,7 @@ msgid "Error"
 msgstr ""
 
 #: classes/blocks/class-covers.php:346
-msgid "Take Action"
+msgid "Take action"
 msgstr "לעשות משהו"
 
 #: assets/src/blocks/Articles/ArticlePreview.js:43
