--- a/languages/planet4-blocks-sk_SK.po
+++ b/languages/planet4-blocks-sk_SK.po
@@ -4,13 +4,13 @@ msgstr ""
 "2;\n"
 "Project-Id-Version: Planet4 - Blocks\n"
 "POT-Creation-Date: 2020-09-09 11:52+0000\n"
-"PO-Revision-Date: 2020-10-09 08:21+0000\n"
+"PO-Revision-Date: 2020-11-11 15:26+0200\n"
 "Last-Translator: Nikos Roussos\n"
 "Language-Team: Slovak\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: planet4-blocks.php\n"
@@ -18,11 +18,11 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"X-Poedit-SearchPath-0: .\n"
-"X-Poedit-SearchPathExcluded-0: *.js\n"
 "Language: sk_SK\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.4.3; wp-5.4.2"
+"X-Loco-Version: 2.4.3; wp-5.4.2\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: *.js\n"
 
 #: classes/class-loader.php:463
 msgid "Planet 4 Blocks"
@@ -47,7 +47,7 @@ msgstr "Prečítajte si viac informácií o tomto probléme"
 
 #: classes/blocks/class-splittwocolumns.php:163
 #: assets/src/blocks/Splittwocolumns/SplittwocolumnsSettings.js:82
-msgid "Get Involved"
+msgid "Get involved"
 msgstr "Zapoj sa"
 
 #: classes/blocks/class-articles.php:46 classes/blocks/class-covers.php:369
@@ -55,7 +55,7 @@ msgstr "Zapoj sa"
 #: templates/blocks/content_covers.twig:70
 #: templates/blocks/content_covers.twig:78
 #: assets/src/blocks/Articles/ArticlesBlock.js:41
-msgid "Load More"
+msgid "Load more"
 msgstr "Načítať viac"
 
 #: classes/blocks/class-articles.php:50
@@ -68,7 +68,7 @@ msgid "Error"
 msgstr ""
 
 #: classes/blocks/class-covers.php:346
-msgid "Take Action"
+msgid "Take action"
 msgstr "Konať"
 
 #: assets/src/blocks/Articles/ArticlePreview.js:43
