--- a/languages/planet4-master-theme-cs_CZ.po
+++ b/languages/planet4-master-theme-cs_CZ.po
@@ -4,12 +4,12 @@ msgstr ""
 "2;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2021-04-16 10:54+0000\n"
+"PO-Revision-Date: 2021-04-16 19:00+0300\n"
 "Language-Team: Czech\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -157,8 +157,6 @@ msgid "Document"
 msgstr "Dokument"
 
 #: src/MasterSite.php:482
-#, fuzzy
-#| msgid "DONATE"
 msgid "Donate"
 msgstr "DARUJ"
 
@@ -187,8 +185,6 @@ msgid "Filters"
 msgstr "Filtry"
 
 #: templates/cookies.twig:6
-#, fuzzy
-#| msgid "GOT IT!"
 msgid "Got it!"
 msgstr "Rozumím"
 
@@ -399,8 +395,7 @@ msgstr "Zobrazili jsme také výsledky pro dotaz "
 
 #: tag.php:74 src/Campaigns.php:253
 msgid "We want you to take action because together we're strong."
-msgstr ""
-"Jedině společně můžeme dosáhnout změny. Přidej se.\n"
+msgstr "Jedině společně můžeme dosáhnout změny. Přidej se."
 
 #: templates/search.twig:19
 msgid "We're sorry we couldn't find any matches for your search term."
