--- a/languages/planet4-master-theme-nl_NL.po
+++ b/languages/planet4-master-theme-nl_NL.po
@@ -3,13 +3,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "Project-Id-Version: Greenpeace Planet 4 Master Theme\n"
 "POT-Creation-Date: 2018-12-13 11:03+0000\n"
-"PO-Revision-Date: 2021-02-04 10:32+0000\n"
+"PO-Revision-Date: 2021-04-16 18:58+0300\n"
 "Last-Translator: Dirk Faber\n"
 "Language-Team: Dutch\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -183,7 +183,6 @@ msgid "Filters"
 msgstr "Filters"
 
 #: templates/cookies.twig:6
-#| msgid "GOT IT!"
 msgid "Got it!"
 msgstr "OK!"
 
@@ -217,8 +216,7 @@ msgstr "Thema"
 
 #: single.php:110
 msgid "Leave your reply"
-msgstr ""
-"Laat een reactie achter (wordt na goedkeuring geplaatst)\n"
+msgstr "Laat een reactie achter (wordt na goedkeuring geplaatst)"
 
 #: templates/taxonomy.twig:42 templates/author.twig:56
 msgid "Load More"
